fixing up spacings

--- a/theme/src/variables.css
+++ b/theme/src/variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Mon, 22 Nov 2021 22:30:24 GMT
+ * Generated on Tue, 23 Nov 2021 16:17:31 GMT
  */
 
 :root {
@@ -130,18 +130,20 @@
   --default-radii-md: 4px;
   --default-radii-lg: 6px;
   --default-radii-round: 50%;
-  --default-spacings-px-xxs: 3;
+  --default-spacings-px-xxs: 4;
   --default-spacings-px-xs: 6;
-  --default-spacings-px-sm: 9;
-  --default-spacings-px-md: 15;
-  --default-spacings-px-lg: 24;
-  --default-spacings-px-xl: 38;
-  --default-spacings-px-xxl: 62;
-  --default-spacings-xxs: 0.24rem;
-  --default-spacings-xs: 0.40rem;
-  --default-spacings-sm: 0.64rem;
-  --default-spacings-md: 1.04rem;
-  --default-spacings-lg: 1.68rem;
-  --default-spacings-xl: 2.72rem;
-  --default-spacings-xxl: 4.40rem;
+  --default-spacings-px-sm: 11;
+  --default-spacings-px-md: 17;
+  --default-spacings-px-lg: 27;
+  --default-spacings-px-xl: 44;
+  --default-spacings-px-xxl: 71;
+  --default-spacings-px-huge: 116;
+  --default-spacings-xxs: 0.30rem;
+  --default-spacings-xs: 0.45rem;
+  --default-spacings-sm: 0.75rem;
+  --default-spacings-md: 1.20rem;
+  --default-spacings-lg: 1.95rem;
+  --default-spacings-xl: 3.15rem;
+  --default-spacings-xxl: 5.10rem;
+  --default-spacings-huge: 8.25rem;
 }
